<resources>
    <string name="app_name">Tutor Me</string>
    <string name="no_network">Vui lòng kiểm tra lại kết nối và thử lại</string>
    <string name="server_time_out">Server không phản hồi</string>
    <string name="convert_response_error">Lỗi convert response từ server</string>
    <string name="connect_error">Lỗi kết nối vui lòng thử lại</string>
    <string name="response_error">Lỗi response</string>
    <string name="main_exit_confirm">Ấn back lần nữa để thoát app</string>
    <string name="title_first">Tutor</string>
    <string name="title_second">Me</string>
    <string name="detect_not_register">Điểm danh thất bại, vui lòng thử lại</string>
    <string name="detect_error">Đã có lỗi xảy ra, vui lòng thử lại</string>
    <string name="detect_success">Điểm danh thành công</string>
    <string name="detect_not_success">Điểm danh không thành công</string>
    <string name="video_call_end">Cuộc gọi đã kết thúc</string>
    <string name="video_call_busy">Người nhận đang bận hoặc không nhấc máy, vui lòng thử lại</string>
    <string name="incoming_call">Cuộc gọi đến</string>
    <string name="account_hint">Email đăng nhập</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="input_email">Nhập email</string>
    <string name="fill_in_here">Điền vào đây</string>
    <string name="login">Đăng nhập</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="read_all">Bạn có muốn đọc tất cả không?</string>
    <string name="delete_notify">Bạn có chắc chắn muốn xóa thông báo?</string>
    <string name="delete_register_course">Bạn có chắc chắn muốn đăng ký lớp học chứ?</string>
    <string name="register_receiver_class">Đăng ký nhận lớp thành công</string>
    <string name="cancel_register_receiver_class">Hủy đăng ký thành công</string>
    <string name="logout_notify">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="rate_student">Bạn chắc chắn muốn đánh giá?</string>
    <string name="comment_success">Nhận xét thành công</string>
    <string name="login_failed_content">Tên đăng nhập hoặc mật khẩu không hợp lệ.\nVui lòng thử lại hoặc ấn Quên mật khẩu!</string>
    <string name="welcome">Chào mừng bạn đến với Tutor Me</string>
    <string name="remember_password">Nhớ mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="update_profile_success">Cập nhật thành công</string>
    <string name="forgot_password_v2">Quên mật khẩu</string>
    <string name="send_code_confirm">Gửi mã xác nhận</string>
    <string name="send_request_forgot_password">Gửi yêu cầu thành công</string>
    <string name="please_input_email">Vui lòng nhập Email để nhận mã xác nhận!</string>
    <string name="please_coming_email">Vui lòng vào email đăng ký để xác nhận đổi mật khẩu</string>
    <string name="no_member">Chưa là thành viên</string>
    <string name="register">đăng ký</string>
    <string name="register_bold">Đăng ký</string>
    <string name="register_fail">Đăng ký thất bại vui lòng thử lại</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="join_course">Tham gia ngay</string>
    <string name="joined">%s Joined</string>
    <string name="send_info_room">Gửi thông tin</string>
    <string name="send_rate">Gửi đánh giá</string>
    <string name="edit_info_room">Sửa thông tin</string>
    <string name="account_wrong">Email đăng nhập chưa đúng định dạng</string>
    <string name="password_wrong">Mật khẩu sai</string>
    <string name="password_new">Mật khẩu mới</string>
    <string name="import_password_new">Nhập lại mật khẩu mới</string>
    <string name="password_old">Mật khẩu cũ</string>
    <string name="comment">Nhận xét</string>
    <string name="password_confirm">Mật khẩu xác nhận</string>
    <string name="password_wrong_limit">Mật khẩu phải từ 6-20 kí tự</string>
    <string name="password_confirm_wrong_limit">Mật khẩu xác nhận phải từ 6-20 kí tự</string>
    <string name="password_wrong_not_equal">Mật khẩu xác nhận phải trùng mật khẩu mới</string>
    <string name="change_password_3rd">Vui lòng liên hệ với bên Google, Facebook mà bạn đã đăng ký</string>
    <string name="password_old_error">Mật khẩu cũ không chính xác. Vui lòng thử lại!</string>
    <string name="change_password_error">Đổi mật khẩu không thành công. Vui lòng thử lại!</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="field_has_not_filled">Chưa điền trường thông tin này</string>
    <string name="information_account">Thông tin tài khoản</string>
    <string name="edit_information_account">chỉnh sửa thông tin</string>
    <string name="information_individual">Thông tin cá nhân</string>
    <string name="input_username">Nhập tên người dùng</string>
    <string name="student">Học sinh</string>
    <string name="room_error">Thông tin phòng học không đúng, vui lòng báo lại giáo viên chủ trì</string>
    <string name="input_room_id">Nhập id phòng</string>
    <string name="input_room_id_no">Hiện chưa có thông tin id</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="input_commenter">Nhập bình luận ở đây</string>
    <string name="input_chat">Nhắn tin</string>
    <string name="input_feedback">Đóng góp ý kiến ở đây</string>
    <string name="count_commenter">%s bình luận</string>
    <string name="close">Đóng</string>
    <string name="input_password_no">Hiện chưa có thông tin mật khẩu</string>
    <string name="version">Phiên bản 1.2.4</string>
    <string name="first_and_lastname">Họ và tên</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="input_date_of_birth">Nhập ngày sinh</string>
    <string name="number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="school">Trường học</string>
    <string name="input_school">Nhập trường học</string>
    <string name="contact">Liên hệ</string>
    <string name="hotline">Hotline</string>
    <string name="duration">Duration</string>
    <string name="students">Students</string>
    <string name="text_lessons">Text lessons</string>
    <string name="subject">Subject</string>
    <string name="files">Files</string>
    <string name="created_date">Created date</string>
    <string name="end_date">End date</string>
    <string name="text_course_includes">This Text course includes</string>
    <string name="text_course_specifications">Text course specifications</string>
    <string name="email">Email</string>
    <string name="email_to">mailto:</string>
    <string name="email_not_exist">Email không tồn tại. Vui lòng kiểm tra lại!</string>
    <string name="website">Website</string>
    <string name="skype">Skype</string>
    <string name="phone_value">0941587396</string>
    <string name="email_value">vucuongtnnd@gmail.com</string>
    <string name="website_value">tutorme.vn</string>
    <string name="skype_value">Admin Support TutorMe</string>
    <string name="gender">Giới tính</string>
    <string name="input_gender">Nhập giới tính</string>
    <string name="select_gender">Chọn giới tính</string>
    <string name="select_week">Chọn thời gian</string>
    <string name="edit_profile_save">Lưu</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other">Khác</string>
    <string name="province">Tỉnh thành</string>
    <string name="room_info">Thông tin phòng</string>
    <string name="feedback">Ý kiến phản hồi</string>
    <string name="support_other">Hỗ trợ khác</string>
    <string name="mail_feedback">Hòm thư góp ý</string>
    <string name="message_room">Nhắn tin lớp</string>
    <string name="please_rate">Vui lòng đánh giá học sinh sau khi kết thúc buổi học!</string>
    <string name="end">Kết thúc</string>
    <string name="student_list">Danh sách học sinh</string>
    <string name="select_province">Chọn tỉnh thành</string>
    <string name="input_province">Nhập tỉnh thành</string>
    <string name="input_province_error">Vui lòng nhập tỉnh thành</string>
    <string name="district">Quận/Huyện</string>
    <string name="input_district">Nhập Quận/Huyện</string>
    <string name="input_district_error">Vui lòng nhập Quận/Huyện</string>
    <string name="select_district">Chọn Quận/Huyện</string>
    <string name="error_msg">Lỗi vui lòng thử lại</string>
    <string name="error_join_room">Đã có lỗi xảy ra, vui lòng thử lại</string>
    <string name="register_success">Đăng kí tài khoản thành công</string>
    <string name="retry">Thử lại</string>
    <string name="home">Trang chủ</string>
    <string name="class_manager">Quản lý lớp</string>
    <string name="notify">Thông báo</string>
    <string name="profile">Tài khoản</string>
    <string name="hello">Xin chào,</string>
    <string name="name">Vũ Quốc Cường</string>
    <string name="title_count_case">Số ca đã dạy</string>
    <string name="title_count_lesson">Buổi cần đánh giá</string>
    <string name="upcoming">Sắp diễn ra</string>
    <string name="happening">Đang diễn ra</string>
    <string name="cancel">Hủy</string>
    <string name="feedback_success">Đóng góp ý kiến thành công</string>
    <string name="update_feature">Tính năng đang phát triển</string>
    <string name="took_place">Đã diễn ra</string>
    <string name="read">Đã đọc</string>
    <string name="took_attendance">Đã điểm danh</string>
    <string name="have_evaluated">Đã đánh giá:</string>
    <string name="time_study">Thời gian dạy</string>
    <string name="attendance">Điểm danh</string>
    <string name="took_attendance_yet">Chưa điểm danh</string>
    <string name="join_now">Tham gia ngay</string>
    <string name="second_ago">%s giây trước</string>
    <string name="minute_ago">%s phút trước</string>
    <string name="hour_ago">%s giờ trước</string>
    <string name="day_ago">%s ngày trước</string>
    <string name="week_ago">%s tuần trước</string>
    <string name="month_ago">%s tháng trước</string>
    <string name="year_ago">%s năm trước</string>
    <string name="now_ago">vừa xong</string>
    <string name="number_member">Sĩ số %s</string>
    <string name="number_member_lesson">Sĩ số %s/%s</string>
    <string name="number_evaluate_lesson">Đánh giá %s/%s</string>
    <string name="evaluate_lesson">%s/%s</string>
    <string name="lesson_session">Buổi %s</string>
    <string name="accept_class">Nhận lớp</string>
    <string name="accept_class_question">Bạn chắc chắn muốn nhận lớp?</string>
    <string name="reject_class_question">Bạn chắc chắn muốn từ chối lớp?</string>
    <string name="mission_home_complete">Bạn đã hoàn thành xuất sắc nhiệm vụ tuần này!</string>
    <string name="mission_home_no_complete">Bạn ơi, hoàn thành các nhiệm vụ tuần này đi!</string>
    <string name="mission_home_empty">Tuần này bạn không có ca dạy nào!</string>
    <string name="lesson_home_teacher_empty">Bạn không có ca dạy nào!</string>
    <string name="lesson_home_teacher_rate_empty">Bạn chưa có buổi nào cần đánh giá!</string>
    <string name="class_home_teacher_empty">Hiện tại chưa có lớp đăng ký dạy!</string>
    <string name="lesson_home_student_empty">Tuần này bạn không có ca học nào!</string>
    <string name="lesson_student_empty">Bạn không có ca học nào!</string>
    <string name="chat_lesson_empty">Hiện không có bình luận nào!</string>
    <string name="chat_feed_back">Hiện chưa có ý kiến nào!</string>
    <string name="class_home_student_empty">Bạn chưa đăng ký lớp học nào!</string>
    <string name="class_register_empty">Hiện tại chưa có lớp nào</string>
    <string name="score_attitude">Thái độ</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_10">10</string>
</resources>